# realmd

./: .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac
dbus/: org.freedesktop.realmd.xml  realm-dbus-constants.h  realmd.service.in
doc/manual/: realm.xml  realmd.conf.xml
doc/website/content/: contribute.html
po/: LINGUAS  Makevars  POTFILES.in  ar.po  as.po  az.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  lt.po  (+31 more)
service/: Makefile.am  org.freedesktop.realmd.policy.in  realm-adcli-enroll.c  realm-adcli-enroll.h  realm-daemon.c  realm-diagnostics.c  realm-disco-mscldap.c  realm-disco-rootdse.c  realm-disco.h  realm-ini-config.c  realm-invocation.c  realm-kerberos-config.c  realm-kerberos-helper.c  realm-kerberos-helper.h  realm-kerberos-membership.h  realm-kerberos.c  realm-ldap.c  realm-options.c  realm-options.h  realm-samba-enroll.c  realm-samba-winbind.c  realm-samba.c  realm-sssd-ad.c  realm-sssd-config.c  realm-sssd-ipa.c  realmd-redhat-authconfig.conf  realmd-redhat.conf  realmd-suse.conf
tests/: mhc.yaml  pytest.ini  readme.pytest  requirements.txt  test-sssd-config.c  test_realmd.py  topology.py  topology_controllers.py
tools/: Makefile.am  realm-client.c  realm-join.c  realm-logins.c  realm-renew.c  realm.c  realm.h
